--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,10 @@ dependencies:
 
 #  create responsive
   responsive_sizer: ^3.1.1
-  screen_size_test: ^1.0.2+3
+
+#  Generate web view
+  webview_flutter: ^4.0.6
+
 
   flutter: 
     sdk: flutter
